k8s-specifications/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vote-gateway
  namespace: vote
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: resulting.local
    allowedRoutes:
      namespaces:
        from: Same
