k8s-specifications/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: result-route
  namespace: vote
spec:
  parentRefs:
  - name: vote-gateway

  hostnames:
  - resulting.local

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
        
    backendRefs:
    - name: result
      port: 8081
